--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Hannah Conversation</title>
   <style>
+    :root{
+      /* altura “visual” do rodapé; ajuste se mudar o padding dos botões */
+      --nav-h: 72px;
+    }
+
     /* ===== Resets e base ===== */
     html, body {
       height: 100%;
@@ -22,13 +27,15 @@
       align-items: stretch;
     }
 
-    /* ===== Layout de página: 3 faixas (header / conteúdo / navegação) ===== */
+    /* ===== Layout de página ===== */
     #page {
-      min-height: 100dvh;                 /* unidades de viewport modernas */
-      min-height: -webkit-fill-available; /* fallback iOS */
+      min-height: 100dvh;
+      min-height: -webkit-fill-available;
       display: grid;
-      grid-template-rows: auto 1fr auto;  /* header / conteúdo / rodapé */
+      grid-template-rows: auto 1fr;  /* header / conteúdo (rodapé é fixo) */
       gap: 0;
+      /* Reserva espaço para o rodapé fixo: */
+      padding-bottom: calc(var(--nav-h) + env(safe-area-inset-bottom));
     }
 
     /* ===== Header ===== */
@@ -65,13 +72,13 @@
       line-height: 1.15;
     }
 
-    /* ===== Stepper (bolinhas de progresso) ===== */
+    /* ===== Stepper ===== */
     #stepper {
       display:flex;
       gap:6px;
       margin: 4px 0 0;
       max-width: 100%;
-      overflow-x: auto;              /* se houver muitas bolinhas */
+      overflow-x: auto;
       -webkit-overflow-scrolling: touch;
       padding-bottom: 4px;
     }
@@ -94,21 +101,23 @@
       align-items: center;
     }
 
-    /* Contêiner central com largura controlada para aproximar personagens em telas grandes */
     .dialogue-max {
       width: 100%;
-      max-width: 880px; /* aproxima bem os dois lados no desktop/tablet */
+      max-width: 880px; /* aproxima no desktop/tablet */
       padding: 8px 12px;
+      /* permite rolagem do conteúdo central sem atingir o rodapé fixo */
     }
 
     #dialogue-container {
       display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr)); /* desktop/tablet: lado a lado */
+      grid-template-columns: repeat(2, minmax(0, 1fr)); /* desktop: lado a lado */
       align-items: start;
       justify-content: center;
-      gap: 18px; /* mais próximo que antes */
+      gap: 18px;
       max-width: 100%;
       width: 100%;
+      overflow: auto; /* rolagem própria se necessário */
+      -webkit-overflow-scrolling: touch;
     }
 
     .character {
@@ -132,8 +141,8 @@
       font-size: clamp(14px, 1.8vw, 18px);
       font-weight: bold;
       background-color: #ffffff;
-      /* Espaço reservado para o badge: */
-      padding: 34px 40px 12px 14px; /* top e right maiores: badge nunca cobre texto */
+      /* Espaço reservado para o badge no topo/direita */
+      padding: 34px 40px 12px 14px;
       border-radius: 12px;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
       max-width: 100%;
@@ -142,13 +151,17 @@
       transition: border-color .2s ease, box-shadow .2s ease, background-color .2s ease;
       margin: 0;
       line-height: 1.28;
-      overflow: visible; /* badge fica totalmente visível */
       word-break: break-word;
+
+      /* Limita fala longa a uma “janela” interna com scroll (desktop) */
+      max-height: 55vh;
+      overflow: auto;
+      -webkit-overflow-scrolling: touch;
     }
 
-    /* Balão placeholder (em caso de bloco sem fala do aluno) */
+    /* Balão placeholder (sem fala do aluno) */
     .character-text.placeholder {
-      color: transparent;             /* texto vazio/oculto */
+      color: transparent;
       user-select: none;
       border: 1px dashed #bdbdbd;
       background-color: rgba(255,255,255,0.85);
@@ -163,21 +176,24 @@
       width: 100%;
     }
 
-    /* ===== Navegação: barra fixa na base da viewport ===== */
+    /* ===== Rodapé FIXO ===== */
     #navigation {
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 20;
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 10px;
-      padding: 8px 12px calc(8px + env(safe-area-inset-bottom)); /* respeita área segura iPhone */
       width: 100%;
-      background: rgba(255,255,255,0.8);
+      background: rgba(255,255,255,0.9);
       backdrop-filter: saturate(140%) blur(6px);
-      position: sticky;   /* mantém visível se o conteúdo interno rolar */
-      bottom: 0;
-      left: 0;
-      z-index: 10;
       border-top: 1px solid rgba(0,0,0,0.08);
+      padding: 8px 12px calc(8px + env(safe-area-inset-bottom));
+      /* altura “visual” para cálculo do var(--nav-h) */
+      min-height: var(--nav-h);
     }
 
     .nav-button {
@@ -192,11 +208,11 @@
       flex: 1;
       max-width: 220px;
       border-radius: 10px;
-      min-height: 44px; /* alvos acessíveis */
+      min-height: 44px;
       line-height: 1.1;
     }
 
-    /* ===== Modal de conclusão ===== */
+    /* ===== Modal ===== */
     #completion-modal {
       display: none;
       position: fixed;
@@ -238,19 +254,19 @@
       z-index: 999;
     }
 
-    /* ===== Visual progress badges nas bolhas ===== */
+    /* ===== Badge de progresso no balão ===== */
     .progress-badge {
       position: absolute;
-      top: 8px;     /* fica dentro do balão, mas com espaço reservado */
+      top: 8px;
       right: 10px;
       font-size: 12px;
       padding: 3px 6px;
       border-radius: 999px;
-      background: #e0e0e0; /* base */
+      background: #e0e0e0;
       color: #000;
       box-shadow: 0 1px 3px rgba(0,0,0,.2);
       line-height: 1;
-      pointer-events: none; /* não bloqueia clique/seleção no texto */
+      pointer-events: none;
       z-index: 1;
     }
     .badge-half { background: #ffe08a; }
@@ -301,19 +317,22 @@
       outline: 2px solid rgba(76,175,80,.25);
     }
 
-    /* acessibilidade: respeita menos movimento */
+    /* acessibilidade: menos movimento */
     @media (prefers-reduced-motion: reduce) {
       .pulse, .highlight-once, .success-flash, .forward-pulse { animation: none; outline: none; box-shadow: none; }
     }
 
-    /* ===== Tablets médios (encurta levemente) ===== */
+    /* ===== Tablets médios ===== */
     @media (max-width: 900px) {
       .dialogue-max { max-width: 760px; }
       .character img { width: clamp(90px, 22vw, 140px); }
-      .character-text { font-size: clamp(13px, 2.2vw, 17px); }
+      .character-text { 
+        font-size: clamp(13px, 2.2vw, 17px);
+        max-height: 50vh; /* tablet */
+      }
     }
 
-    /* ===== Celular: empilhado (um em cima do outro) ===== */
+    /* ===== Celular: empilhado ===== */
     @media (max-width: 600px) {
       #dialogue-container { 
         grid-template-columns: 1fr;  /* empilhado */
@@ -323,10 +342,8 @@
       .character img { width: clamp(84px, 28vw, 120px); }
       .character-text { 
         font-size: clamp(14px, 3.8vw, 16px);
-        /* Mantém o espaço pro badge no mobile também */
         padding: 34px 40px 12px 12px;
-        /* Em celulares, se o texto for muito longo, liberamos scroll interno */
-        max-height: 45vh;
+        max-height: 48vh; /* mobile */
         overflow: auto;
         -webkit-overflow-scrolling: touch;
       }
@@ -335,10 +352,10 @@
       .step-dot { width: 8px; height: 8px; }
     }
 
-    /* Ultra-compacto para aparelhos muito pequenos (largura <= 360px) */
+    /* Ultra-compacto (<=360px) */
     @media (max-width: 360px) {
       .character img { width: clamp(72px, 30vw, 110px); }
-      .character-text { max-height: 46vh; }
+      .character-text { max-height: 50vh; }
       .nav-button { min-height: 42px; }
       .step-dot { width: 7px; height: 7px; }
     }
@@ -373,11 +390,12 @@
         </div>
       </div>
     </div>
+  </div>
 
-    <div id="navigation">
-      <button class="nav-button" onclick="previousDialogue()">&lt;&lt; Back</button>
-      <button class="nav-button" onclick="nextDialogue()">Forward &gt;&gt;</button>
-    </div>
+  <!-- Rodapé fixo -->
+  <div id="navigation">
+    <button class="nav-button" onclick="previousDialogue()">&lt;&lt; Back</button>
+    <button class="nav-button" onclick="nextDialogue()">Forward &gt;&gt;</button>
   </div>
 
   <div id="overlay"></div>
@@ -497,7 +515,7 @@
       });
     }
 
-    // ======== Prompting logic para áudio e forward ========
+    // ======== Prompting logic ========
     function clearPromptAnimations() {
       robotBtn.classList.remove('pulse','highlight-once','success-flash');
       studentBtn.classList.remove('pulse','highlight-once','success-flash');
@@ -525,14 +543,13 @@
     function stopForwardPrompt() {
       if (forwardBtn) forwardBtn.classList.remove('forward-pulse');
     }
-    // ================================================================
 
-    // AUTH: wait for userName BEFORE initializing dialogue
+    // AUTH
     firebase.auth().onAuthStateChanged(async function(user) {
       if (user) {
         fetchUserAvatar(user.uid);
-        await fetchUserName(user.uid);   // ensures userName is set
-        initializeDialogue();            // then load & show dialogue
+        await fetchUserName(user.uid);
+        initializeDialogue();
       } else {
         alert("You are not authenticated. Please log in.");
         window.location.href = '/login.html';
@@ -623,7 +640,6 @@
           return res.text();
         })
         .then(text => {
-          // Split by empty line(s), trim lines
           const rawBlocks = text.trim().split(/\n\s*\n/);
           blocks = rawBlocks.map(b => {
             const lines = b.split('\n').map(l => l.trim()).filter(Boolean);
@@ -665,22 +681,22 @@
       robotTextEl.textContent = block.robotText || '';
       studentTextEl.textContent = block.studentText || '';
 
-      // Student area: sempre visível; se não houver fala, vira placeholder e oculta botão mantendo espaço
+      // Student area
       const studentBtnWrap = document.getElementById('student-audio-button').parentElement;
       if (block.hasStudent) {
         studentTextEl.classList.remove('placeholder');
         studentBtnWrap.style.visibility = 'visible';
       } else {
         studentTextEl.classList.add('placeholder');
-        studentBtnWrap.style.visibility = 'hidden'; // mantém layout
+        studentBtnWrap.style.visibility = 'hidden';
       }
 
       // Reset prompts
       clearPromptAnimations();
-      stopForwardPrompt();   // não pisca antes da hora
-      startRobotPrompt();    // convida a começar pelo robô
+      stopForwardPrompt();
+      startRobotPrompt();
 
-      // ROBOT button
+      // ROBOT
       robotBtn.onclick = () => {
         stopRobotPrompt();
         speakText(block.robotText, () => {
@@ -689,7 +705,7 @@
         });
       };
 
-      // STUDENT button (só se existir)
+      // STUDENT
       if (block.hasStudent) {
         studentBtn.onclick = () => {
           studentBtn.classList.remove('highlight-once');
@@ -707,7 +723,7 @@
 
     function previousDialogue() {
       if (currentDialogueIndex > 0) {
-        stopForwardPrompt(); // garante que não pisque ao voltar
+        stopForwardPrompt();
         currentDialogueIndex--;
         updateDialogue(currentDialogueIndex);
       }
@@ -715,7 +731,7 @@
 
     function nextDialogue() {
       if (currentDialogueIndex < blocks.length - 1) {
-        stopForwardPrompt(); // garante que não pisque no início do próximo
+        stopForwardPrompt();
         currentDialogueIndex++;
         updateDialogue(currentDialogueIndex);
       }
@@ -739,7 +755,7 @@
     }
 
     function showModal() {
-      stopForwardPrompt(); // não precisa piscar com modal aberto
+      stopForwardPrompt();
       document.getElementById('completion-modal').style.display = 'block';
       document.getElementById('overlay').style.display = 'block';
     }
